# dsba-itop2023-hw

./: dataset.csv
new 2/: CMakeLists.txt  CMakeLists.txt.user.c029db2  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  aboutwidget.cpp  aboutwidget.h  aboutwidget.ui  compairsondialog.cpp  compairsondialog.h  compairsondialog.ui  comptablemodel.cpp  comptablemodel.h  dialog.cpp  dialog.h  dialog.ui  dialogex.cpp  dialogex.h  dialogex.ui  filterdialog.cpp  filterdialog.h  filterdialog.ui  finddialog.cpp  finddialog.h  finddialog.ui  iconwidget.cpp  iconwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  new_ru.ts  proxymodel.cpp  proxymodel.h  relevantdioalog.cpp  relevantdioalog.h  relevantdioalog.ui  resource.qrc  tablemodule.cpp  tablemodule.h  (+3 more)
new 2/img/: pal.xml
